--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,12 +7,11 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: create-drop
+      ddl-auto: update
     properties:
       hibernate:
         database: postgresql
         database-platform: org.hibernate.dialect.PostgreSQLDialect
-
 
 logging:
   level:
