--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,8 +2,7 @@ server:
   port: 8081
 
 spring:
-  profiles:
-    active: dev
+
   mail:
     host: smtp.gmail.com
     port: 587
@@ -32,7 +31,7 @@ spring:
 
   jpa:
     hibernate:
-      ddl-auto: update
+      ddl-auto: validate
     show-sql: true
     properties:
       hibernate:
@@ -40,3 +39,10 @@ spring:
       database: postgresql
       database-platform: org.hibernate.dialect.PostgreSQLDialect
     open-in-view: false
+  flyway:
+    baseline-on-migrate: true
+    enabled: true
+    baseline-description: "Initial version"
+    baseline-version: 0
+    locations: classpath:db/migration
+
