added DTOs and Mappers

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -2,7 +2,8 @@ server:
   port: 8081
 
 spring:
-
+  profiles:
+    active: dev
   mail:
     host: smtp.gmail.com
     port: 587
@@ -45,4 +46,6 @@ spring:
     baseline-description: "Initial version"
     baseline-version: 0
     locations: classpath:db/migration
-
+logging:
+  level:
+    tagarde: DEBUG
